--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,90 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+
+html {
+  background-image: url('/background.png');
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+p {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.menu {
+  padding: 10px;
+  background-color: rgb(255, 228, 130);
+  margin-bottom: 10px;
+  width: 320px;    
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  border-radius: 7px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.menu__title {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
-.card {
-  padding: 2em;
+.menu__form {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.read-the-docs {
-  color: #888;
+.menu__error {
+  color: red;
+  margin: 0;
+}
+
+.menu__input { 
+  width: 80%;
+  border: 4px solid rgb(81, 72, 40);
+  font-size: 1.2em;
+}
+
+.menu__add-button {
+  width: 20%;
+  background-color: rgb(81, 72, 40);
+  color: white;
+  border: 4px solid rgb(81, 72, 40);
+}
+
+.todo {
+  padding: 10px;
+  background-color: white;
+  width: 320px;
+  height: 400px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  border-radius: 7px;
+}
+
+.todo__list {
+  padding: 0;
+  margin: 0;
+}
+
+.todo__item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 4px;
+  border-bottom: 2px solid rgb(81, 72, 40);
+}
+
+.todo__done-button {
+  width: 20%;
+  background-color: rgb(81, 72, 40);
+  color: white;
+  border: 4px solid rgb(81, 72, 40);
+}
+
+.todo__text {
+  font-size: 1.2em;
 }
