--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ p {
   padding: 10px;
   background-color: white;
   width: 320px;
-  height: 400px;
+  min-height: 400px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   border-radius: 7px;
 }
@@ -76,6 +76,7 @@ p {
   justify-content: space-between;
   margin-bottom: 4px;
   border-bottom: 2px solid rgb(81, 72, 40);
+  width: 100%;
 }
 
 .todo__done-button {
@@ -87,4 +88,6 @@ p {
 
 .todo__text {
   font-size: 1.2em;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
